Fix spacing between the text container and the text below.

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/disclaimer.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/disclaimer.scss
@@ -33,6 +33,7 @@ body {
         overflow-y: auto;
         background-color: $white;
         padding: 1em;
+        margin-bottom: 1em;
         border: 1px solid $grey;
     }
 
@@ -46,6 +47,8 @@ body {
 
         input[type="text"] {
             height: 0;
+            margin: 0;
+            padding: 0;
         }
 
         .button-container {
